src/objects/IPM_SourcingPlan__c.object
<CustomObject>
    <description>Used to Store mapping between Product,Country and Sourcing</description>
    <fields>
        <fullName>IPM_CapabilityConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Store capability status</description>
        <label>CapabilityConfirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_ProductPlan__c</fullName>
        <description>store product plan country mapping</description>
        <label>IPM ProductPlan</label>
        <referenceTo>IPM_ProductPlan__c</referenceTo>
        <relationshipLabel>IPM SourcingPlans</relationshipLabel>
        <relationshipName>IPM_SourcingPlanProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPM_SourcingUnit__c</fullName>
        <description>Factory information product manufacturing</description>
        <label>SourcingUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Sourcing_Unit__c</fullName>
        <label>IPM SourcingUnit</label>
        <referenceTo>IPM_SourcingUnit__c</referenceTo>
        <relationshipLabel>IPM SourcingPlans</relationshipLabel>
        <relationshipName>IPM_SourcingPlans</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>IPM SourcingPlan</label>
    <nameField>
        <displayFormat>SourPlan-{000000}</displayFormat>
        <label>IPM SourcingPlan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPM SourcingPlans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>